<resources>
    <string name="app_name">FixLab</string>
    <string name="add_name">Add</string>
    <string name="list_name">List</string>
    <string name="clients_name">Clients</string>
    <string name="devices_name">Devices</string>
    <string name="technicians_name">Technicians</string>
    <string name="start_reparation_name">Start Reparation</string>
    <string name="enter_name">ENTER</string>
    <string name="modify_name">Modify</string>
    <string name="delete_name">Delete</string>
    <string name="client_info">Client info</string>
    <string name="client_name">Client</string>
    <string name="save_client">Save client</string>
    <string name="modify_client">Modify client</string>
    <string name="repaired_list_name">Repaired List</string>
    <string name="device_info">Device info</string>
    <string name="model">Model</string>
    <string name="brand">Brand</string>
    <string name="serial_number">Serial number</string>
    <string name="condition">Condition</string>
    <string name="status">Status</string>
    <string name="description">Description</string>
    <string name="device_type">Device type</string>
    <string name="device_condition">Device condition</string>
    <string name="save_device">Save device</string>
    <string name="status_recived">Recived</string>
    <string name="status_in_revision">In revision</string>
    <string name="status_in_reparation">In reparation</string>
    <string name="status_fixed">Fixed</string>
    <string name="status_waiting_for_parts">Waiting for parts</string>
    <string name="status_finished">Finished</string>
    <string name="technician_info">Technician info</string>
    <string name="modify_technician">Modify technician</string>
    <string name="assigned_devices">Assigned devices</string>
    <string name="condition_new">New</string>
    <string name="condition_used">Used</string>
    <string name="condition_repaired">Repaired</string>
    <string name="condition_working">Working</string>
    <string name="condition_good_condition">In good condition</string>
    <string name="condition_scratched">Scratched</string>
    <string name="condition_defective">Defective</string>
    <string name="condition_destroyed">Destroyed</string>
    <string name="dni">DNI</string>
    <string name="name">Name:</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="availability">Availability:</string>
    <string name="technician">Technician</string>
    <string name="client">Client</string>
    <string name="device">Device</string>
    <string name="diagnosis">Diagnosis:</string>
    <string name="repair_done">Repair realized:</string>
    <string name="repair_hint_summary">Describe the Repair:</string>
    <string name="btn_save_repair_summary">Mark Repair as Done</string>
    <string name="cost">Cost</string>
    <string name="time_needed">Time needed</string>
    <string name="btn_save_diagnosis">Save Diagnosis</string>
    <string name="status_pending">Pending</string>
    <string name="status_completed">Completed</string>
    <string name="status_in_progress">In progress</string>
    <string name="status_unreparable">Unreparable</string>
    <string name="summaries">"Finalized Repairs "</string>"
</resources>