<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSummPersonCompletedLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/client_name" />

            <TextView
                android:id="@+id/tvSummDeviceCompletedLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device" />

            <TextView
                android:id="@+id/tvSummTechnicianCompletedLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/technician" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSummPersonCompleted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/tvSummDeviceCompleted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/tvSummTechnicianCompleted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>